// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть настройки рекламы без раскрытия refs 1`] = `
Object {
  "code": "index",
  "data": Object {
    "direct": Object {},
    "rtb": Object {},
  },
  "requests": Array [],
  "settings": Object {
    "top": Object {
      "id": "f4fzzzxjyl",
      "sources": Array [
        Object {
          "async": true,
          "code": "R-A-148383-1",
          "extParams": Object {
            "awaps_section": "29337",
          },
          "type": "rtb",
        },
      ],
    },
  },
}
`;

exports[`должен вернуть пустой результат для неизвестного типа страницы 1`] = `
Object {
  "code": "index1",
  "data": Object {
    "direct": Object {},
    "rtb": Object {},
  },
  "requests": Array [],
  "settings": Object {},
}
`;

exports[`должен пропустить блок с неправильным конфигом 1`] = `
Object {
  "code": "index",
  "data": Object {
    "direct": Object {},
    "rtb": Object {},
  },
  "requests": Array [],
  "settings": Object {},
}
`;

exports[`раскрытие refs должен вернуть настройки рекламы 1`] = `
Object {
  "code": "index",
  "data": Object {
    "direct": Object {},
    "rtb": Object {},
  },
  "requests": Array [],
  "settings": Object {
    "top": Object {
      "id": "f4fzzzxjyl",
      "key": "value",
      "reload": 45,
      "sources": Array [
        Object {
          "async": true,
          "code": "R-A-148383-1",
          "extParams": Object {
            "awaps_section": "29337",
          },
          "type": "rtb",
        },
      ],
    },
  },
}
`;

exports[`серверный запросы direct должен подготовить запрос за данными 1`] = `
Object {
  "code": "index",
  "data": Object {
    "direct": Object {
      "c3:0": Object {
        "index": 0,
        "key": "c3",
        "method": "getStaticContextDirectJSON",
        "params": Object {
          "pageId": "151547",
        },
        "type": "direct",
      },
    },
    "rtb": Object {},
  },
  "requests": Array [
    Object {
      "index": 0,
      "key": "c3",
      "method": "getStaticContextDirectJSON",
      "params": Object {
        "pageId": "151547",
      },
      "type": "direct",
    },
  ],
  "settings": Object {
    "c3": Object {
      "id": "f4fzzzxjyl",
      "sources": Array [
        Object {
          "groupKey": "c3",
          "method": "getStaticContextDirectJSON",
          "params": Object {
            "pageId": "151547",
          },
          "sections": Array [
            "premium",
            "direct",
          ],
          "type": "direct",
        },
      ],
    },
  },
}
`;

exports[`серверный запросы rtb должен подготовить запрос за данными 1`] = `
Object {
  "code": "index",
  "data": Object {
    "direct": Object {},
    "rtb": Object {
      "top:0": Object {
        "meta": Object {
          "index": 0,
          "key": "top:meta",
          "method": "getDirectS2S",
          "params": Object {
            "imp-id": "20",
            "pageId": "148790",
            "partner-stat-id": "123",
          },
          "type": "rtb",
        },
        "widget_settings": Object {
          "index": 0,
          "key": "top:widget_settings",
          "method": "getDirectWidgetSettings",
          "params": Object {
            "imp-id": "148790-20",
            "partner-stat-id": "123",
          },
          "type": "rtb",
        },
      },
    },
  },
  "requests": Array [
    Object {
      "index": 0,
      "key": "top:meta",
      "method": "getDirectS2S",
      "params": Object {
        "imp-id": "20",
        "pageId": "148790",
        "partner-stat-id": "123",
      },
      "type": "rtb",
    },
    Object {
      "index": 0,
      "key": "top:widget_settings",
      "method": "getDirectWidgetSettings",
      "params": Object {
        "imp-id": "148790-20",
        "partner-stat-id": "123",
      },
      "type": "rtb",
    },
  ],
  "settings": Object {
    "top": Object {
      "id": "f4fzzzxjyl",
      "sources": Array [
        Object {
          "async": true,
          "code": "R-A-148383-1",
          "data": Object {
            "meta": Object {
              "method": "getDirectS2S",
              "params": Object {
                "imp-id": "20",
                "pageId": "148790",
              },
            },
            "widget_settings": Object {
              "method": "getDirectWidgetSettings",
              "params": Object {
                "imp-id": "148790-20",
              },
            },
          },
          "type": "rtb",
        },
      ],
    },
  },
}
`;
